[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/list_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/delete.png" type="Texture" id=2]
[ext_resource path="res://assets/styles/item_style.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/LinkItem.gd" type="Script" id=4]

[node name="LinkItem" type="Panel"]
anchor_right = 1.0
rect_min_size = Vector2( 224, 80 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1358.0
margin_bottom = 72.0
custom_constants/separation = 16

[node name="StartLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 9.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.14902, 0.152941, 1 )
text = "1"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 25.0
margin_top = 16.0
margin_right = 71.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.14902, 0.152941, 1 )
text = "<-->"

[node name="EndLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 87.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.14902, 0.152941, 1 )
text = "1"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 1303.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 1319.0
margin_top = 16.0
margin_right = 1350.0
margin_bottom = 47.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_LinkItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LinkItem_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
